--- a/css/style.css
+++ b/css/style.css
@@ -3,8 +3,11 @@
     --green:#1abc9c;
     --light_blue:#3a546d;
 }
+img{
+    max-width: 100%;
+}
 
-
+/* HEADER */
 .main-header{
     background-color: var(--light_blue);
 }
@@ -13,8 +16,6 @@
     color: white;
     font-size: 2em;
 }
-
-
 .menu-description{
     color: white;
     font-size: 1em;
@@ -23,9 +24,26 @@
     justify-content: space-between;
 }
 
-.hero-logo{
-    height: 50px;
+/* HERO */
+.hero-bg{
+    background-color: var(--green);
 }
+.hero-description > .hero-title{
+    font-size: 50px;
+}
+
+.hero-description > .hero-subtitle{
+    font-size: 1.3em;
+}
+
+.hero-description{
+    padding-bottom:70px ;
+    gap: 1.5em;
+    display: flex;
+    flex-direction: column;
+}
+
+
 
 
 /* DEBUG */
