--- a/css/style.css
+++ b/css/style.css
@@ -40,9 +40,20 @@ footer [class*='col']:not(.row)::before{
 .hero-logo{
     width: 260px;
 }
-.hero-star::before{
+
+.star-dark{
+    color: var(--dark-blue);
+}
+
+.star::before{
     background-color: white;
     height: 4px;
     width: 20%;
     display: flex;
 }
+
+.port-icon img{
+    width: 100%;
+    border-radius: 20px;
+}
+
